--- a/docs/requirements.adoc
+++ b/docs/requirements.adoc
@@ -4,17 +4,19 @@
 .. Was ist You Only Look Once (YOLO)?
 .. Was ist Single Shot Detection (SSD)?
 .. Wie kann man die Netze auf die mobile Plattform übertragen?
-.. Welche Modelle können verwendet werden?
+.. Welche Modelle können verwendet werden? (MobileNet, Darknet, ...)
 .. Analyse und Erläuterung, warum wir welchen Ansatz wählen.
 
 . [big]*Entwicklung eines neuronalen Netzes*
-.. Erstellen von Trainingsdaten für Bewegungen
-.. Trainieren eines Machine-Learning-Modells zum Erkennen von beweglichen Objekten
+.. Erstellen von Trainingsdaten für Kreisbewegungen
+.. Erstellen von Trainingsdaten für das Erkennen von Schuhen
+.. TFLite-Modell zum Erkennen von beweglichen Objekten
+.. TFLite-Modell zum Voraussagen von Umfang und Mittelpunkt einer Kreisbewegung
+.. TFLite-Modell zum Prüfen einer Kreisbewegung
 
 . [big]*Ziel der Forschungsarbeit*
-.. Erkennung von kontinuierlicher Bewegung
-.. oder klassifizieren einer Bewegung
-.. oder Berechnung der Frequenz einer Bewegung
+.. Wie erkennt man Kreisbewegungen?
+.. Wie kann die Frequenz einer Bewegung erkannt werden?
 
 . [big]*Bevorstehende Probleme*
 .. Wie analysiert man die Bewegung mehrerer Objekte innerhalb eines Bildes?
